salesforce/force-app/main/default/objects/Account/fields/Account_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Display_Name__c</fullName>
    <description>Shows the Code Name for Council accounts, otherwise shows the real Account Name. Use this field for display purposes to ensure Council accounts are properly anonymized.</description>
    <formula>IF(Eudia_Council_Account__c, Code_Name__c, Name)</formula>
    <inlineHelpText>Displays the anonymized code name for Council accounts, or the real name for standard accounts.</inlineHelpText>
    <label>Account Display Name</label>
    <type>Text</type>
</CustomField>