salesforce/force-app/main/default/objects/Account/fields/Account_Health_History__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_History__c</fullName>
    <description>Historical log of Account Health and Account Health Overview changes. Auto-populated by flow when either field is updated.</description>
    <label>Account Health History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>