salesforce/force-app/main/default/objects/Account/fields/Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Code_Name__c</fullName>
    <description>Anonymized identifier for Council accounts (e.g., "Project Redwood", "Eagle Corp"). This is displayed instead of the real company name for restricted users.</description>
    <inlineHelpText>Enter an anonymized code name for this Council account. This will be shown to non-leadership users instead of the real company name.</inlineHelpText>
    <label>Code Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>