salesforce/force-app/main/default/objects/Account/fields/Company_Context__c.field-meta.xml
<CustomField>
    <fullName>Company_Context__c</fullName>
    <description>Business overview and context for engineering deployment. Includes industry, size, and key information about the company.</description>
    <label>Company Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>