salesforce/force-app/main/default/objects/Account/fields/CS_Outcome_Data__c.field-meta.xml
<CustomField>
    <fullName>CS_Outcome_Data__c</fullName>
    <description>Structured JSON outcomes by status category (Delivered / In Delivery / Near-Term)</description>
    <label>CS Outcome Data</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>