salesforce/force-app/main/default/objects/Account/fields/Deployment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when contract is signed, infosec is cleared, and account is ready for engineering deployment.</description>
    <label>Deployment Approved</label>
    <type>Checkbox</type>
</CustomField>