salesforce/force-app/main/default/objects/Account/fields/Eudia_Council_Account__c.field-meta.xml
<CustomField>
    <fullName>Eudia_Council_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master flag indicating this is a Council engagement under attorney-client privilege. When checked, the account name will be anonymized for restricted users.</description>
    <inlineHelpText>Check this box to mark this account as a Council engagement. This will anonymize the account name for non-leadership users.</inlineHelpText>
    <label>Eudia Council Account</label>
    <type>Checkbox</type>
</CustomField>