salesforce/force-app/main/default/objects/Account/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>Official legal entity name for contracts and engineering deployment keys.</description>
    <label>Legal Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>