salesforce/force-app/main/default/objects/Account/fields/LinkedIn_Display__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Display__c</fullName>
    <label>LinkedIn Display</label>
    <description>Shows real LinkedIn URL for regular accounts, Confidential for Counsel accounts</description>
    <formula>IF(Eudia_Council_Account__c, "Confidential", Linked_in_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>