salesforce/force-app/main/default/objects/Account/fields/Phone_Display__c.field-meta.xml
<CustomField>
    <fullName>Phone_Display__c</fullName>
    <label>Phone Display</label>
    <description>Shows real phone for regular accounts, Confidential for Counsel accounts</description>
    <formula>IF(Eudia_Council_Account__c, "Confidential", Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>