salesforce/force-app/main/default/objects/Account/fields/Website_Display__c.field-meta.xml
<CustomField>
    <fullName>Website_Display__c</fullName>
    <label>Website Display</label>
    <description>Shows real website for regular accounts, Confidential for Counsel accounts</description>
    <formula>IF(Eudia_Council_Account__c, "Confidential", Website)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>